Possible fix for inline OP cut off depending on window size
But does this break something else?

--- a/src/css/Cleanup.css
+++ b/src/css/Cleanup.css
@@ -39,6 +39,7 @@ hr:not(#unread-line),
 :root.hide-navlinks .navLinks.navLinksBot.desktop,
 :root.hide-navlinks .navLinks,
 .ad-plea,
+.adl,
 .exif:not([style]),
 [hidden] {
   display: none;
